--- a/PyCross/Tests/Untitled1.ipynb
+++ b/PyCross/Tests/Untitled1.ipynb
@@ -1753,14 +1753,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 375,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10\\n 1'"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(column_hint[8]).strip(\"[]\").replace(\",\", \"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -2244,6 +2257,409 @@
    ],
    "source": [
     "img_loc2 == img_loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"N\"\n",
+    "size=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image not Valid, Please enter valid format for image (.png, .jpeg, .jpg)\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'image_array' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-380-71012f4b87fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mload_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindow_sizex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindow_sizey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-282-cbdfd6bad773>\u001b[0m in \u001b[0;36mload_image\u001b[0;34m(img, plot, window_sizex, window_sizey)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mimage_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcheck_window_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwin_sizex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwin_sizey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'image_array' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "load_image(img=filename, plot=False, window_sizex=size, window_sizey=size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib.backend_bases import MouseButton\n",
+    "from createpicross import * \n",
+    "import numpy as np\n",
+    "    \n",
+    "\n",
+    "# SETUP GAME\n",
+    "example_img = load_image()\n",
+    "\n",
+    "length , width = np.shape(example_img)\n",
+    "fig, ax = plot_hints(example_img, length, width) \n",
+    "ax.text(length/6, -1, \"Left click to color in square, Right click to mark Board\", fontsize=20)\n",
+    "\n",
+    "answer_array = example_img\n",
+    "loc = []\n",
+    "\n",
+    "def track_drawn(image, loc):\n",
+    "    xs, ys = np.where(image == 1)\n",
+    "    img_loc = [(x,y) for x,y in zip(xs,ys)]\n",
+    "    if len(loc.intersection(img_loc)) == len(img_loc):\n",
+    "        print(\"FINISHED\")\n",
+    "        plt.disconnect(click)\n",
+    "    \n",
+    "\n",
+    "def on_click(event):\n",
+    "    global loc \n",
+    "    if event.inaxes:\n",
+    "        if event.button is MouseButton.LEFT:\n",
+    "            x = int(np.floor(event.xdata))\n",
+    "            y = int(np.floor(event.ydata))\n",
+    "            if answer_array[y][x] == 1:\n",
+    "                ax.scatter(x+0.5, y+0.5, marker=\"s\", s = (10*500/fig.dpi)**2, c=\"black\")\n",
+    "                fig.canvas.draw()\n",
+    "                loc.append((x, y))\n",
+    "                print(set(loc))\n",
+    "                track_drawn(answer_array, set(loc))\n",
+    "            else:\n",
+    "                ax.scatter(x+0.5, y+0.5, marker=\"s\", s = (10*500/fig.dpi)**2, c=\"red\")\n",
+    "                fig.canvas.draw()\n",
+    "        if event.button is MouseButton.RIGHT:\n",
+    "            x = int(np.floor(event.xdata))\n",
+    "            y = int(np.floor(event.ydata))\n",
+    "            ax.scatter(x+0.5, y+0.5, marker=\"x\", s = (10*200/fig.dpi)**2, c=\"purple\")\n",
+    "            fig.canvas.draw()\n",
+    " \n",
+    "        \n",
+    "click = plt.connect('button_press_event', on_click)\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "def check_done(): \n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Package Dependents \n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.image import imread\n",
+    "from matplotlib.ticker import (AutoMinorLocator, MultipleLocator)\n",
+    "import random\n",
+    "from PIL import Image\n",
+    "\n",
+    "style = 'default'\n",
+    "plt.style.use(style)\n",
+    "plt.rcParams['font.family'] = 'fantasy'\n",
+    "\n",
+    "\n",
+    "# takes image given by user and rebinned the image \n",
+    "def img2bw(im, threshold = 50):\n",
+    "    '''\n",
+    "    Takes in an image and takes features from it into another array with 0 for no\n",
+    "    notable features and 1 as having notable features. \n",
+    "    \n",
+    "    Turns array of color into binary, black and white image \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    im: array_like\n",
+    "        original 2D array of image \n",
+    "    threshold: int\n",
+    "        picks the threshold at which to select features in image \n",
+    "    Returns\n",
+    "    -------\n",
+    "    rebinned: array_like\n",
+    "        rebinned and binary array with the important features of original image\n",
+    "    '''\n",
+    "    \n",
+    "    length, width = np.array(im).shape[:2]\n",
+    "    \n",
+    "    rebinned = np.zeros((length,width))\n",
+    "    for x in np.arange(0, length):\n",
+    "        for y in np.arange(0, width):\n",
+    "            if im[x:x+1, y:y+1].mean() > threshold:\n",
+    "                rebinned[x:x+1, y:y+1] = 1\n",
+    "    return rebinned\n",
+    "\n",
+    "# loads in the image and shows the user what the image is \n",
+    "# if no image is provided then a preset image is set and shown \n",
+    "\n",
+    "def load_image(img=None, window_sizex=20, window_sizey=20):\n",
+    "    '''\n",
+    "    loads the image that is to be the basis of the picross puzzle\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    img: array_like\n",
+    "        image to be used  \n",
+    "    window_sizex int\n",
+    "        size of x component of image (Default: 20) \n",
+    "    window_sizey int\n",
+    "        size of y component of image (Default: 20) \n",
+    "    Returns\n",
+    "    -------\n",
+    "    rebinned: array_like\n",
+    "        rebinned and binary array with the important features of original image\n",
+    "    '''\n",
+    "    \n",
+    "    corr_window_sizex, corr_window_sizey = check_window_size(window_sizex, window_sizey)\n",
+    "    \n",
+    "    try: \n",
+    "        if check_image_loaded(img)[0] == True:\n",
+    "            print(\"Image Provided, Returning Image....\")\n",
+    "            image_array = check_image_loaded(img)[1]\n",
+    "            resized_image = np.array(image_array.resize((corr_window_sizex, corr_window_sizey))) \n",
+    "            image_array = np.array(img2bw(resized_image))\n",
+    "            return image_array\n",
+    "            \n",
+    "        elif check_image_loaded(img)[0] == False: \n",
+    "            print(\"No Image Provided, Returning Preset Image....\")\n",
+    "            image_array = check_image_loaded(img)[1] \n",
+    "            return image_array\n",
+    "        else: \n",
+    "            pass\n",
+    "    except TypeError:\n",
+    "        pass\n",
+    "   \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "def check_window_size(win_sizex, win_sizey):\n",
+    "    '''\n",
+    "    checks window size choosen by user and makes sure it is less than 40x40 pixels \n",
+    "    '''\n",
+    "    if win_sizex > 40: \n",
+    "        win_sizex = 40\n",
+    "        print(\"X-window size too large, using size\", win_sizex, \"instead\")\n",
+    "    if win_sizey > 40: \n",
+    "        win_sizey = 40\n",
+    "        print(\"Y-window size too large, using size\", win_sizey, \"instead\")        \n",
+    "    return win_sizex, win_sizey\n",
+    "    \n",
+    "    \n",
+    "def check_image_loaded(image=None): \n",
+    "    '''\n",
+    "    checks that the image needed to load is loaded properly, if no image is given, it returns back a random preset image \n",
+    "\n",
+    "    '''\n",
+    "    if image is None: \n",
+    "        image_array = set_preset_image()\n",
+    "        return False, image_array\n",
+    "    else:\n",
+    "        try: \n",
+    "            loaded_image = Image.open(image)\n",
+    "            img = check_image_size(loaded_image)\n",
+    "            return True, img\n",
+    "        \n",
+    "        except FileNotFoundError: \n",
+    "            print(\"Image not Valid, Please enter valid format for image (.png, .jpeg, .jpg)\")\n",
+    "            pass\n",
+    "        \n",
+    "def check_image_size(image): \n",
+    "    '''\n",
+    "    checks the size of the image, the user is trying to use, if it is too big, let the user know \n",
+    "    '''\n",
+    "    if (np.array(image).shape[0] >= 500) and (np.array(image).shape[1] >= 500):\n",
+    "        print(\"Image is too Big! Please restrict image to 500x500 pixels\")\n",
+    "        pass\n",
+    "    elif (np.array(image).shape[0] <= 3) and (np.array(image).shape[1] <= 3):\n",
+    "        print(\"Image is too Small! Please add an image greater than 3x3 pixels\")\n",
+    "        pass\n",
+    "        \n",
+    "    else:\n",
+    "        return image\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def set_preset_image(): \n",
+    "    '''\n",
+    "    selects a random image from a preset array dictionary\n",
+    "    '''\n",
+    "\n",
+    "    images = {\"GALAXY\": np.array(img2bw(np.array(Image.open(\"images/galaxy.png\").resize((15, 15))))),\n",
+    "              \"STAR\": np.array(img2bw(np.array(Image.open(\"images/star.png\").resize((15, 15))))),\n",
+    "              \"ROCKET\":  np.array(img2bw(np.array(Image.open(\"images/rocket.png\").resize((10, 10)))))\n",
+    "                }\n",
+    "    \n",
+    "    return random.choice(list(images.values()))\n",
+    "\n",
+    "\n",
+    "def plot_grid(length, width): \n",
+    "    '''\n",
+    "    plot the grid with the coordinates of each box depending on the size, specifed by the function\n",
+    "    '''\n",
+    "    fig, ax = plt.subplots(figsize=(length, width), dpi=50)\n",
+    "    ax.set_xlim(0, length)\n",
+    "    ax.set_ylim(0, width)\n",
+    "    ax.xaxis.set_major_locator(MultipleLocator(1))\n",
+    "    ax.yaxis.set_major_locator(MultipleLocator(1))\n",
+    "    ax.grid(which='major', color='#CCCCCC', linestyle='-')\n",
+    "    ax.set_xticklabels(\"\")\n",
+    "    ax.set_yticklabels(\"\")\n",
+    "    \n",
+    "    # this is to add coordinates to each box, this can be used for debugging \n",
+    "    '''\n",
+    "    for i in np.arange(length+1):\n",
+    "        for j in np.arange(width+1):\n",
+    "            ax.annotate(xy= (i+0.2, j+0.5), text=str(i)+\", \"+str(j))\n",
+    "   '''         \n",
+    "    return fig, ax\n",
+    "\n",
+    "def consecutive(data, stepsize=1):\n",
+    "    '''\n",
+    "    finds consectuive numbers in an array \n",
+    "    '''\n",
+    "    return np.split(data, np.where(np.diff(data) != stepsize)[0]+1)\n",
+    "\n",
+    "def get_hint(array): \n",
+    "    '''\n",
+    "    given an array of 1s and 0s, it returns back grouped hints of where the ones are and how they are grouped \n",
+    "    '''\n",
+    "    one, = np.where(array == 1)\n",
+    "    np.split(array, np.where(np.diff(array) != 1)[0]+1)\n",
+    "    hints = [len(i) for i in consecutive(one)]\n",
+    "    return hints\n",
+    "\n",
+    "def plot_hints(img_array, length, width): \n",
+    "    '''\n",
+    "    puts hints at the edges of the image \n",
+    "    '''\n",
+    "    \n",
+    "    fig, ax = plot_grid(length, width)\n",
+    "    \n",
+    "    row_hint = []\n",
+    "    column_hint = []\n",
+    "\n",
+    "    for i in np.arange(len(img_array)):\n",
+    "        row_hint.append(get_hint(img_array[i]))\n",
+    "        column_hint.append(get_hint(img_array.T[i]))\n",
+    "    \n",
+    "    column_hint = [list(reversed(col)) for col in column_hint]\n",
+    "    # plot rows hints \n",
+    "    for i in np.arange(1, length+1):\n",
+    "        ax.text(-0.5*len(row_hint[i-1]), i-0.5, ''.join(str(row_hint[i-1]).strip(\"[]\")), fontsize=20)\n",
+    "\n",
+    "    # plot columns hints \n",
+    "    for i in np.arange(1, width+1):\n",
+    "        ax.text(i-.5, width+0.25*len(column_hint[i-1]), str(column_hint[i-1]).strip(\"[]\").replace(\",\", \",\\n\"), va='center', fontsize=20)\n",
+    "    \n",
+    "    return fig, ax\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Image Provided, Returning Preset Image....\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(load_image(img=None, window_sizex=10, window_sizey=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Image Provided, Returning Preset Image....\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 399,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(load_image(img=None, window_sizex=10, window_sizey=10), np.ndarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Image Provided, Returning Preset Image....\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(load_image(img=None, window_sizex=10, window_sizey=10)) == \"Nonetype\""
    ]
   },
   {
